--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cdn-file-server",
   "version": "1.0.0",
   "description": "Secure CDN file serving application",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "test": "vitest run"
@@ -10,6 +11,6 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "vitest": "^1.6.1"
+    "vitest": "^1.0.0"
   }
 }
