--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
+  "name": "cdn-file-server",
+  "version": "1.0.0",
+  "description": "Secure CDN file serving middleware",
+  "main": "src/middleware/path-sanitizer.js",
+  "scripts": {
+    "test": "vitest run"
+  },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "vitest": "^3.2.3"
+    "vitest": "^1.0.0"
   }
 }
