--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "cdn-file-service",
+  "name": "cdn-management-server",
   "version": "1.0.0",
-  "description": "CDN file error handling module",
-  "type": "module",
-  "main": "dist/fileErrorHandler.js",
+  "description": "CDN Management Server",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "build": "tsc"
+    "test": "vitest",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "typescript": "^4.9.5",
-    "vitest": "^0.34.6"
+    "@types/mime-types": "^2.1.1",
+    "@types/node": "^20.4.2",
+    "typescript": "^5.1.6",
+    "vitest": "^0.33.0",
+    "supertest": "^6.3.3"
   }
 }
