--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
   "name": "cdn-file-service",
   "version": "1.0.0",
-  "description": "CDN file error handling module",
-  "type": "module",
-  "main": "dist/fileErrorHandler.js",
+  "description": "CDN file management service",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest",
-    "build": "tsc"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
+    "test:watch": "vitest"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "typescript": "^4.9.5",
-    "vitest": "^0.34.6"
+    "vitest": "latest",
+    "typescript": "latest"
   }
 }
