--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "jest": "^30.0.3",
     "typescript": "^4.9.5",
     "vitest": "^0.34.6"
   }
