--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "dist/fileErrorHandler.js",
   "scripts": {
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "build": "tsc"
   },
   "dependencies": {
@@ -14,8 +14,22 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.12",
     "jest": "^30.0.3",
+    "ts-jest": "^29.1.2",
     "typescript": "^4.9.5",
     "vitest": "^0.34.6"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testMatch": [
+      "**/test/**/*.test.js",
+      "**/tests/**/*.test.ts"
+    ]
   }
 }
